--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-.App {
+/* .App {
   text-align: center;
 }
 
@@ -35,4 +35,839 @@
   to {
     transform: rotate(360deg);
   }
+} */
+
+body {
+  --black: #000000;
+  --ash-black: #222;
+  --white: #fafafa;
+  --sky: #00ccff;
+  --green: #22dddd;
+  --blue: #1300ff;
+  --dusk: #6600ff;
+  --purple: #9900ff;
+  --pink: #ff0066;
+  --red: #fe0222;
+  --orange: #fd7702;
+  --yellow: #ffbb00;
+
+  --background: var(--white);
+  --accent: var(--ash-black);
+
+  margin: 0;
+  padding: 0;
+  /* background-color: var(--background); */
+  color: #c4c3ca;
+background-color: #17171a;
+  color: var(--accent);
+  padding-bottom: 100px;
+  overflow-x: hidden;
+}
+
+a {
+  color: var(--accent);
+}
+
+ul,
+li {
+  padding: 0;
+  margin: 0;
+}
+
+ul {
+  width: 100%;
+  padding-top: 25vw;
+  justify-content: center;
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+  list-style: none;
+}
+
+li {
+  font-size: 2rem;
+  margin-bottom: 1.6rem;
+}
+
+* {
+  font-family: sofia-pro, sans-serif;
+  font-weight: 400;
+  font-style: normal;
+  -webkit-font-smoothing: antialiased;
+}
+
+h1,
+h2,
+h3 {
+  font-family: sofia-pro, sans-serif;
+  font-weight: 600;
+  font-style: normal;
+}
+
+h1 {
+  --base-width: 8.2vw;
+  font-size: clamp(20px, var(--base-width), 700px);
+  font-weight: 700;
+  letter-spacing: -0.15rem;
+  line-height: 1.2;
+  text-align: center;
+  margin: 100px 0;
+  white-space: nowrap;
+  position: absolute;
+  top: -10vw;
+  left: 50%;
+  transform: translateX(-50%);
+}
+
+h2 {
+  font-size: clamp(20px, 6vw, 700px);
+  font-weight: 400;
+  margin: 50px 0 10px;
+}
+
+p {
+  margin: 0 0 30px 0;
+  font-size: 18px;
+}
+
+#sandbox-title {
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  padding: 20px;
+  border-top: 1px dotted var(--accent);
+  background: rgba(255, 255, 255, 0.7);
+  background-size: 4px 4px;
+  backdrop-filter: blur(4px);
+  -webkit-backdrop-filter: blur(4px);
+  -moz-backdrop-filter: blur(4px);
+  font-size: 14px;
+  line-height: 14px;
+}
+
+#sandbox-title svg {
+  margin-right: 20px;
+}
+
+#sandbox-title a {
+  text-decoration: none;
+  color: var(--accent);
+}
+
+code {
+  font-family: input-mono, monospace;
+  font-weight: 400;
+  font-style: normal;
+}
+
+#progress {
+  position: fixed;
+  top: 20px;
+  left: 20px;
+  transform: rotate(-90deg);
+}
+
+circle {
+  stroke-dashoffset: 0;
+  stroke-width: 15%;
+  fill: none;
+}
+
+.bg {
+  stroke: var(--accent);
+  opacity: 0.3;
+}
+
+#progress .indicator {
+  stroke: var(--accent);
+}
+
+::-webkit-scrollbar {
+  height: 5px;
+  width: 5px;
+  background: var(--background);
+  -webkit-border-radius: 1ex;
+}
+
+::-webkit-scrollbar-thumb {
+  background: var(--accent);
+  -webkit-border-radius: 1ex;
+}
+
+::-webkit-scrollbar-corner {
+  background: #fff3;
+}
+
+h2 {
+  margin: 0;
+  color: var(--accent);
+  left: calc(75vw);
+  font-weight: 700;
+  letter-spacing: -3px;
+  line-height: 1.2;
+  position: absolute;
+}
+
+section {
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+  scroll-snap-align: center;
+  perspective: 500px;
+}
+
+section > div {
+  aspect-ratio: 4/3;
+  height: 80vh;
+  position: relative;
+  max-height: 90vh;
+  margin: 20px;
+  background: var(--white);
+  overflow: hidden;
+  background: var(--ash-black);
+}
+
+img {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  width: 100%;
+  height: 100%;
+}
+
+.progress {
+  position: fixed;
+  left: 0;
+  right: 0;
+  height: 5px;
+  background: var(--accent);
+  bottom: 100px;
+}
+
+.back {
+  padding: 100px;
+  display: flex;
+  justify-content: center;
+  align-self: center;
+}
+
+.privacy-screen {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: var(--accent);
+  z-index: 2;
+}
+
+/* Please ❤ this if you like it! */
+/* // Navigation */
+
+@import url('https://fonts.googleapis.com/css?family=Montserrat:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i');
+
+/* body{
+	font-family: 'Montserrat', sans-serif;
+	font-weight: 300;
+	font-size: 15px;
+	line-height: 1.7;
+	color: #c4c3ca;
+	background-color: #17171a;
+	overflow-x: hidden;
+	-webkit-transition: all 300ms linear;
+	transition: all 300ms linear;
+} */
+a {
+	cursor: pointer;
+}
+a:hover {
+	text-decoration: none;
+}
+
+/* #Cursor
+================================================== */
+
+.cursor,
+.cursor2,
+.cursor3{
+	position: fixed;
+	border-radius: 50%;	
+	/* transform: translateX(-50%) translateY(-50%); */
+	pointer-events: none;
+	/* left: -100px;
+	top: 50%; */
+	mix-blend-mode: difference;
+	-webkit-transition: all 300ms linear;
+	transition: all 300ms linear;
+}
+.cursor{
+	background-color: #fff;
+	height: 0;
+	width: 0;
+	z-index: 99999;
+}
+.cursor2,.cursor3{
+	height: 36px;
+	width: 36px;
+	z-index:99998;
+	-webkit-transition:all 0.3s ease-out;
+	transition:all 0.3s ease-out
+}
+.cursor2.hover,
+.cursor3.hover{
+	-webkit-transform:scale(2) translateX(-25%) translateY(-25%);
+	transform:scale(2) translateX(-25%) translateY(-25%);
+	border:none
+}
+.cursor2{
+	border: 2px solid #fff;
+	box-shadow: 0 0 22px rgba(255, 255, 255, 0.6);
+}
+.cursor2.hover{
+	background: rgba(255,255,255,1);
+	box-shadow: 0 0 12px rgba(255, 255, 255, 0.2);
+	height: 66px;
+	width: 66px;
+	z-index:99998;
+	-webkit-transition:all 0.3s ease-out;
+	transition:all 0.3s ease-out
+}
+
+@media screen and (max-width: 1200px){
+	.cursor,.cursor2,.cursor3{
+		display: none
+	}
+}
+
+/* #Primary style
+================================================== */
+
+.section {
+    position: relative;
+	width: 100%;
+	display: block;
+}
+.over-hide{
+	overflow: hidden;
+}
+.full-height {
+	height: 100vh;
+}
+
+/* #Navigation
+================================================== */
+ 
+.cd-header{
+    position: fixed;
+	width:100%;
+	top:0;
+	left:0;
+	z-index:100;
+} 
+.header-wrapper{
+    position: relative;
+	width: calc(100% - 100px);
+	margin-left: 50px;
+} 
+.logo-wrap {
+	position: absolute;
+	display:block;
+	left:0;
+	top: 40px;
+	cursor: pointer;
+}
+.logo-wrap a {
+	cursor: pointer;
+	text-decoration: none;
+	font-family: 'Montserrat', sans-serif;
+	font-weight: 900;
+	font-size: 20px;
+	line-height: 20px;
+	text-transform: uppercase;
+	letter-spacing: 2px;
+	color: #fff;
+	transition : all 0.3s ease-out;
+}
+.logo-wrap a span{ 
+	color: #8167a9;
+}
+.logo-wrap a:hover {
+	opacity: 0.9;
+	color: #292929;
+}
+.nav-but-wrap{ 
+	position: relative;
+	display: inline-block;
+	float: right;
+	padding-left: 15px;
+	padding-top: 15px;
+	margin-top: 26px;
+	transition : all 0.3s ease-out;
+}
+
+.menu-icon {
+	height: 30px;
+	width: 30px;
+	position: relative;
+	z-index: 2;
+	cursor: pointer;
+	display: block;
+}
+
+.menu-icon__line {
+	height: 2px;
+	width: 30px;
+	display: block;
+	background-color: #fff;
+	margin-bottom: 7px;
+	cursor: pointer;
+	-webkit-transition: background-color .5s ease, -webkit-transform .2s ease;
+	transition: background-color .5s ease, -webkit-transform .2s ease;
+	transition: transform .2s ease, background-color .5s ease;
+	transition: transform .2s ease, background-color .5s ease, -webkit-transform .2s ease;
+}
+.menu-icon:hover .menu-icon__line{
+	background-color: #000000;
+}
+.menu-icon__line-left {
+	width: 16.5px;
+	-webkit-transition: all 200ms linear;
+	transition: all 200ms linear;
+}
+.menu-icon__line-right {
+	width: 16.5px;
+	float: right;
+	-webkit-transition: all 200ms linear;
+	-moz-transition: all 200ms linear;
+	-o-transition: all 200ms linear;
+	-ms-transition: all 200ms linear;
+	transition: all 200ms linear;
+}
+.menu-icon:hover .menu-icon__line-left,
+.menu-icon:hover .menu-icon__line-right {
+	width: 30px;
+}
+.nav {
+	position: fixed;
+	z-index: 98;
+}
+.nav:before, .nav:after {
+	content: "";
+    margin: 0px;
+	position: fixed;
+	width: 100vw;
+	height: 100vh;
+	background: rgba(20, 21, 26,0.6);
+	border-bottom-left-radius: 200%;
+	z-index: -1;
+	-webkit-transition: -webkit-transform cubic-bezier(0.77, 0, 0.175, 1) 0.6s, border-radius linear 0.8s;
+	transition: -webkit-transform cubic-bezier(0.77, 0, 0.175, 1) 0.6s, border-radius linear 0.8s;
+	transition: transform cubic-bezier(0.77, 0, 0.175, 1) 0.6s, border-radius linear 0.8s;
+	transition: transform cubic-bezier(0.77, 0, 0.175, 1) 0.6s, -webkit-transform cubic-bezier(0.77, 0, 0.175, 1) 0.6s, border-radius linear 0.8s;
+	-webkit-transform: translateX(100%) translateY(-100%);
+          transform: translateX(100%) translateY(-100%);
+}
+.nav:after {
+	background: rgba(9,9,12,1);
+	-webkit-transition-delay: 0s;
+          transition-delay: 0s;
+}
+.nav:before {
+	-webkit-transition-delay: .2s;
+          transition-delay: .2s;
+}
+.nav__content {
+	position: fixed;
+	visibility: hidden;
+	top: 50%;
+	margin-top: 20px;
+	-webkit-transform: translate(0%, -50%);
+          transform: translate(0%, -50%);
+	width: 100%;
+	text-align: center;
+}
+.nav__list {
+	position: relative;
+	padding: 0;
+	margin: 0;
+	z-index: 2;
+}
+.nav__list-item {
+	position: relative;
+	display: block;
+	-webkit-transition-delay: 0.8s;
+          transition-delay: 0.8s;
+	opacity: 0;
+	text-align: center;
+	color: #fff;
+	overflow: hidden; 
+	font-family: 'Montserrat', sans-serif;
+	font-size: 8vh;
+	font-weight: 900;
+	line-height: 1.15;
+	letter-spacing: 3px;
+	-webkit-transform: translate(100px, 0%);
+          transform: translate(100px, 0%);
+	-webkit-transition: opacity .2s ease, -webkit-transform .3s ease;
+	transition: opacity .2s ease, -webkit-transform .3s ease;
+	transition: opacity .2s ease, transform .3s ease;
+	transition: opacity .2s ease, transform .3s ease, -webkit-transform .3s ease;
+	margin-top: 0;
+	margin-bottom: 0;
+}
+.nav__list-item a{ 
+	position: relative;
+	text-decoration: none;
+	color: rgba(255,255,255,0.6);
+	overflow: hidden; 
+	cursor: pointer;
+	padding-left: 5px;
+	padding-right: 5px;
+	font-weight: 900;
+	z-index: 2;
+	display: inline-block;
+	text-transform: uppercase;
+    -webkit-transition: all 200ms linear;
+    transition: all 200ms linear; 
+}
+.nav__list-item a:after{ 
+	position: absolute;
+	content: '';
+	top: 50%;
+	margin-top: -2px;
+	left: 50%;
+	width: 0;
+	height: 0;
+	opacity: 0;
+	background-color: #8167a9;
+	z-index: 1;
+    -webkit-transition: all 200ms linear;
+    transition: all 200ms linear; 
+}
+.nav__list-item a:hover:after{ 
+	height: 4px;
+	opacity: 1;
+	left: 0;
+	width: 100%;
+}
+.nav__list-item a:hover{
+	color: rgba(255,255,255,1);
+}
+.nav__list-item.active-nav a{
+	color: rgba(255,255,255,1);
+}
+.nav__list-item.active-nav a:after{ 
+	height: 4px;
+	opacity: 1;
+	left: 0;
+	width: 100%;
+}
+.navBar_div.nav-active .nav__content {
+	visibility: visible;
+}
+.navBar_div.nav-active .menu-icon__line {
+	background-color: #fff;
+	-webkit-transform: translate(0px, 0px) rotate(-45deg);
+          transform: translate(0px, 0px) rotate(-45deg);
+}
+.navBar_div.nav-active .menu-icon__line-left {
+	width: 15px;
+	-webkit-transform: translate(2px, 4px) rotate(45deg);
+          transform: translate(2px, 4px) rotate(45deg);
+}
+.navBar_div.nav-active .menu-icon__line-right {
+	width: 15px;
+	float: right;
+	-webkit-transform: translate(-3px, -3.5px) rotate(45deg);
+          transform: translate(-3px, -3.5px) rotate(45deg);
+}
+.navBar_div.nav-active .menu-icon:hover .menu-icon__line-left,
+.navBar_div.nav-active .menu-icon:hover .menu-icon__line-right {
+	width: 15px;
+}
+
+/* navBar_Div STYLING */
+.navBar_div.nav-active .nav {
+	visibility: visible;
+}
+.navBar_div.nav-active .nav:before, .navBar_div.nav-active .nav:after {
+	-webkit-transform: translateX(0%) translateY(0%);
+          transform: translateX(0%) translateY(0%);
+	border-radius: 0;
+}
+.navBar_div.nav-active .nav:after {
+	-webkit-transition-delay: .1s;
+          transition-delay: .1s;
+}
+.navBar_div.nav-active .nav:before {
+	-webkit-transition-delay: 0s;
+          transition-delay: 0s;
+}
+.navBar_div.nav-active .nav__list-item {
+	opacity: 1;
+	-webkit-transform: translateX(0%);
+          transform: translateX(0%);
+	-webkit-transition: opacity .3s ease, color .3s ease, -webkit-transform .3s ease;
+	transition: opacity .3s ease, color .3s ease, -webkit-transform .3s ease;
+	transition: opacity .3s ease, transform .3s ease, color .3s ease;
+	transition: opacity .3s ease, transform .3s ease, color .3s ease, -webkit-transform .3s ease;
+}
+.navBar_div.nav-active .nav__list-item:nth-child(0) {
+	-webkit-transition-delay: 0.7s;
+          transition-delay: 0.7s;
+}
+.navBar_div.nav-active .nav__list-item:nth-child(1) {
+	-webkit-transition-delay: 0.8s;
+          transition-delay: 0.8s;
+}
+.navBar_div.nav-active .nav__list-item:nth-child(2) {
+	-webkit-transition-delay: 0.9s;
+          transition-delay: 0.9s;
+}
+.navBar_div.nav-active .nav__list-item:nth-child(3) {
+	-webkit-transition-delay: 1s;
+          transition-delay: 1s;
+}
+.navBar_div.nav-active .nav__list-item:nth-child(4) {
+	-webkit-transition-delay: 1.1s;
+          transition-delay: 1.1s;
+}
+.navBar_div.nav-active .nav__list-item:nth-child(5) {
+	-webkit-transition-delay: 1.2s;
+          transition-delay: 1.2s;
+}
+.navBar_div.nav-active .nav__list-item:nth-child(6) {
+	-webkit-transition-delay: 1.3s;
+          transition-delay: 1.3s;
+}
+.navBar_div.nav-active .nav__list-item:nth-child(7) {
+	-webkit-transition-delay: 1.4s;
+          transition-delay: 1.4s;
+}
+.navBar_div.nav-active .nav__list-item:nth-child(8) {
+	-webkit-transition-delay: 1.5s;
+          transition-delay: 1.5s;
+}
+.navBar_div.nav-active .nav__list-item:nth-child(9) {
+	-webkit-transition-delay: 1.6s;
+          transition-delay: 1.6s;
+}
+.navBar_div.nav-active .nav__list-item:nth-child(10) {
+	-webkit-transition-delay: 1.7s;
+          transition-delay: 1.7s;
+}
+
+.switch-wrap {
+	position: absolute;
+	top: 50%;
+	left: 0;
+	z-index: 10;
+    transform: translateY(-50%);
+	width: 100%;
+	-webkit-transition: all 500ms linear;
+	transition: all 500ms linear; 
+	margin: 0 auto;
+	text-align: center;
+}
+.switch-wrap h2 {
+	font-weight: 900;
+	font-size: 46px;
+	line-height: 1;
+	color: #fff;
+	text-align: center;
+	text-transform: uppercase;
+	margin-bottom: 40px;
+	-webkit-transition: all 300ms linear;
+	transition: all 300ms linear; 
+}
+@media screen and (max-width: 580px){
+  .switch-wrap h1 {
+    font-size: 32px;
+  }
+}
+.switch-wrap p {
+	font-weight: 600;
+	font-size: 14px;
+	letter-spacing: 1px;
+	line-height: 1;
+	color: #8167a9;
+	text-align: center;
+	margin-top: 15px;
+}
+.switch-wrap p span {
+	position: relative;
+}
+.switch-wrap p span:before {
+	position: absolute;
+	content: '';
+	width: 100%;
+	height: 2px;
+	background-color: #fff;
+	left: 0;
+	bottom: -4px;
+	-webkit-transition: all 300ms linear;
+	transition: all 300ms linear; 
+}
+.switch-wrap p span:nth-child(2):before {
+	opacity: 0;
+}
+#switch,
+#circle {
+	cursor: pointer;
+	-webkit-transition: all 300ms linear;
+	transition: all 300ms linear; 
+} 
+#switch {
+	width: 60px;
+	height: 8px;
+	margin: 0 auto;
+	text-align: center;
+	border: 2px solid #000;
+	border-radius: 27px;
+	background: #8167a9;
+	position: relative;
+	display: inline-block;
+}
+#circle {
+	position: absolute;
+	top: -11px;
+	left: -13px;
+	width: 26px;
+	height: 26px;
+	border-radius: 50%;
+	box-shadow: 0 4px 4px rgba(26,53,71,0.25), 0 0 0 1px rgba(26,53,71,0.07);
+	background: #fff;
+}
+.switched {
+	border-color: #8167a9 !important;
+	background: #000 !important;
+}
+.switched #circle {
+	left: 43px;
+	background: #000;
+}
+
+/* #Light
+================================================== */
+
+body.light{
+	background-color: #fff;
+}
+body.light .cursor,
+body.light .cursor2,
+body.light .cursor3{
+	mix-blend-mode: normal;
+}
+body.light .cursor2{
+	border: 2px solid #1f2029;
+	box-shadow: 0 0 4px rgba(0, 0, 0, 0.1);
+}
+body.light .cursor2.hover{
+	background: rgba(0,0,0,0.06);
+	box-shadow: 0 0 2px rgba(0, 0, 0, 0.1);
+	border-color: transparent;
+}
+body.light .logo-wrap a {
+	color: #1f2029;
+}
+body.light .menu-icon__line {
+	background-color: #1f2029;
+}
+body.light .nav:before {
+	background: rgba(235, 235, 235,0.6);
+}
+body.light .nav:after {
+	background: rgba(250,250,250,1);
+}
+body.light .nav__list-item a{ 
+	color: rgba(0,0,0,0.6); 
+}
+body.light .nav__list-item a:hover{
+	color: #1f2029;
+}
+body.light .nav__list-item.active-nav a{
+	color: #1f2029;
+}
+body.light .switch-wrap h1 {
+	color: #000;
+}
+body.light .switch-wrap p span:nth-child(2):before {
+	opacity: 1;
+	background-color: #000;
+}
+body.light .switch-wrap p span:nth-child(1):before {
+	opacity: 0;
+}
+
+/* Sphere Animation */
+.animation-wrapper {
+	width: 50%;
+	padding-bottom: 50%;
+  }
+   
+  .sphere-animation {
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	width: 580px;
+	height: 580px;
+	margin: -290px 0 0 -290px;
+  }
+  .sphere{
+	 height: 576px;
+	 width: 450px;
+  }
+  .sphere path {
+	fill: url(#sphereGradient);
+	stroke-width: 1px;
+	stroke: rgba(80,80,80,.35);
+	backface-visibility: hidden;
+  }
+ 
+  /* Sphere Animation */
+ 
+  
+  /* tEXT - ANIMATION */
+  .ml12 {
+	 font-weight: 200;
+	 font-size: 1.8em;
+	 text-transform: uppercase;
+	 letter-spacing: 0.5em;
+   }
+   
+   .ml12 .letter {
+	 display: inline-block;
+	 line-height: 1em;
+   }
+  /* tEXT - ANIMATION */
+
+
+  .social-media-links {
+    height: 100vh;
+    position: absolute;
+    z-index: 2;
+    padding: 0 0 0 70px;
+    width: auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+	font-size: 22px;
+}
+.social-media-links div svg{
+	padding: 8px;
+	color: rgb(165, 165, 165);
+}
+.social-media-links .social_links svg:hover {
+	padding: 8px;
+	font-size: 25px;
+	color: rgb(255, 255, 255);
 }
