--- a/src/App.css
+++ b/src/App.css
@@ -58,10 +58,10 @@ body {
   padding: 0;
   /* background-color: var(--background); */
   color: #c4c3ca;
-background-color: #17171a;
+  background-color: #17171a;
   color: var(--accent);
   padding-bottom: 100px;
-  overflow-x: hidden;
+  overflow: hidden;
 }
 
 a {
@@ -95,7 +95,7 @@ li {
   font-style: normal;
   -webkit-font-smoothing: antialiased;
 }
-
+/* 
 h1,
 h2,
 h3 {
@@ -257,7 +257,7 @@ img {
   display: flex;
   justify-content: center;
   align-self: center;
-}
+} */
 
 .privacy-screen {
   position: fixed;
@@ -692,6 +692,42 @@ a:hover {
   .switch-wrap h1 {
     font-size: 32px;
   }
+  .menu-icon__line{
+	color: white;
+  }
+  .menu-icon:hover .menu-icon__line{
+	background-color: #ffffff;
+	}
+	.social-media-links {
+		width: 100% !important;
+		left: 0;
+		bottom: 0;
+		padding: 10px 0 10px 0 !important;
+		height: auto !important;
+		flex-direction: row !important;
+	}
+
+	.nav__list-item {
+		position: relative;
+		display: block;
+		transition-delay: 0.8s;
+		opacity: 0;
+		text-align: center;
+		color: #fff;
+		overflow: hidden;
+		font-family: 'Montserrat', sans-serif;
+		font-size: 4vh;
+		font-weight: 900;
+		line-height: 1.15;
+		letter-spacing: 3px;
+		transform: translate(100px, 0%);
+		transition: opacity .2s ease, transform .3s ease;
+		margin-top: 0;
+		margin-bottom: 0;
+	}
+	/* .navBar_div{
+		width: 100%;
+	} */
 }
 .switch-wrap p {
 	font-weight: 600;
@@ -860,14 +896,37 @@ body.light .switch-wrap p span:nth-child(1):before {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-	font-size: 22px;
 }
-.social-media-links div svg{
+.social-media-links a{
+	transition: ease-in 0.4s;
+	font-size: 22px;
 	padding: 8px;
 	color: rgb(165, 165, 165);
 }
-.social-media-links .social_links svg:hover {
+
+.social-media-links a:hover{
+	font-size: 22px;
 	padding: 8px;
-	font-size: 25px;
+	color: rgb(165, 165, 165);
+}
+.FaFacebook_social_links:hover {
+    
+	/* font-size: 23px; */
 	color: rgb(255, 255, 255);
+	transform: scale(1.1);
+}
+.FaGithub_social_links:hover {
+    
+	color: rgb(255, 255, 255);
+	transform: scale(1.1);
+}
+.FaTwitter_social_links:hover {
+    
+	color: rgb(255, 255, 255);
+	transform: scale(1.1);
+}
+.FaLinkedin_social_links:hover {
+    
+	color: rgb(255, 255, 255);
+	transform: scale(1.1);
 }
