--- a/src/App.css
+++ b/src/App.css
@@ -1115,11 +1115,12 @@ body.light .switch-wrap p span:nth-child(1):before {
     border-radius: 40px;
 }
 .about-img img {
-    width: 100%;
-    height: 380px;
+	width: 100%;
+    height: 400px;
     padding: 30px;
     padding-top: 10px;
-    border-radius: 40px;
+    border-radius: 50%;
+    margin-top: -50px;
 }
 .cv {
     padding-top: 40px;
